Zähle Klausurschreiber ohne Nachschreiber